syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";

option go_package = "CatalogService/proto";

service CatalogService {
  rpc AddRestaurant (Restaurant) returns (Restaurant);
  rpc AddMenuItem (MenuItem) returns (MenuItem);
  rpc GetRestaurants (google.protobuf.Empty) returns (stream Restaurant);
  rpc GetMenuItems (google.protobuf.Empty) returns (stream MenuItem);
}

message Restaurant {
  int32 id = 1;
  string name = 2;
  string location = 3;
}

message MenuItem {
  int32 id = 1;
  string name = 2;
  double price = 3;
  int32 restaurant_id = 4;
}

message RestaurantList {
  repeated Restaurant restaurants = 1;
}

message MenuItemList {
  repeated MenuItem menu_items = 1;
}

message RestaurantId {
  int32 id = 1;
}

message Empty {}